// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn should match snapshot 1`] = `
<div
  className="jsx-412928382 SignIn"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-412928382 picture"
  >
    <img
      alt="Help"
      className="jsx-412928382"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-412928382 text"
  >
    <div
      className="jsx-412928382 title"
    >
      <Heading
        element="h1"
        size="large"
        weight="bold"
      >
        Sign in
      </Heading>
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
  </div>
  <div
    className="jsx-412928382 buttons"
  >
    <div
      className="jsx-412928382 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-412928382 kiwi-account"
  >
    <Link
      data-cy="link-kiwi-login"
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-412928382 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css=".SignIn.jsx-412928382{width:480px;padding-top:128px;padding-bottom:50px;}div.picture.jsx-412928382 img.jsx-412928382{width:203px;height:156px;}div.picture.jsx-412928382{margin:0px 127px 0px 150px;}div.text.jsx-412928382{margin:68px 40px 32.8px 40px;}.title.jsx-412928382{margin-bottom:8px;}.googleButton.jsx-412928382{margin-bottom:16px;}.buttons.jsx-412928382{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-412928382{margin-top:8px;text-align:center;}img.chevron.jsx-412928382{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-412928382{width:100%;padding-top:0px;}div.picture.jsx-412928382{text-align:center;margin:75px 0px 20px 0px;}div.text.jsx-412928382{margin:0px 16px 33px 16px;}.buttons.jsx-412928382{display:table;margin:0 auto;}}"
    styleId="412928382"
  />
</div>
`;

exports[`SignIn should match snapshot with expired message 1`] = `
<div
  className="jsx-412928382 SignIn"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-412928382 picture"
  >
    <img
      alt="Help"
      className="jsx-412928382"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-412928382 text"
  >
    <div
      className="jsx-412928382 title"
    >
      <Heading
        element="h1"
        size="large"
        weight="bold"
      >
        Sign in
      </Heading>
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
  </div>
  <div
    className="jsx-1781336386 infoMessage"
  >
    <SystemMessage
      Icon={[Function]}
      type="info"
    >
      Your last session has expired. Please sign in again.
    </SystemMessage>
    <JSXStyle
      css="div.infoMessage.jsx-1781336386{margin-bottom:15px;}"
      styleId="1781336386"
    />
  </div>
  <div
    className="jsx-412928382 buttons"
  >
    <div
      className="jsx-412928382 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-412928382 kiwi-account"
  >
    <Link
      data-cy="link-kiwi-login"
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-412928382 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css=".SignIn.jsx-412928382{width:480px;padding-top:128px;padding-bottom:50px;}div.picture.jsx-412928382 img.jsx-412928382{width:203px;height:156px;}div.picture.jsx-412928382{margin:0px 127px 0px 150px;}div.text.jsx-412928382{margin:68px 40px 32.8px 40px;}.title.jsx-412928382{margin-bottom:8px;}.googleButton.jsx-412928382{margin-bottom:16px;}.buttons.jsx-412928382{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-412928382{margin-top:8px;text-align:center;}img.chevron.jsx-412928382{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-412928382{width:100%;padding-top:0px;}div.picture.jsx-412928382{text-align:center;margin:75px 0px 20px 0px;}div.text.jsx-412928382{margin:0px 16px 33px 16px;}.buttons.jsx-412928382{display:table;margin:0 auto;}}"
    styleId="412928382"
  />
</div>
`;
